--- a/DriverHiring/app/src/main/res/layout/activity_booking.xml
+++ b/DriverHiring/app/src/main/res/layout/activity_booking.xml
@@ -6,6 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".Booking">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ends">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ends"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/Name"
+            android:text="Name :-"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/phone"
+            android:text="Phone :-"
+            android:layout_below="@id/Name"
+            android:textSize="20dp"/>
+
+
+
+    </RelativeLayout>
+
 
 
 
