--- a/DriverHiring/app/src/main/res/layout/activity_driver.xml
+++ b/DriverHiring/app/src/main/res/layout/activity_driver.xml
@@ -4,77 +4,144 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Driver_Login">
-
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:src="@drawable/splashh"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/img"/>
+    tools:context=".Driver_Login"
+    android:background="@drawable/bg_login">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img"
-        android:text="Login"
-        android:textSize="40dp"
+        android:layout_alignParentTop="true"
+        android:text="DRIVER"
+        android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:id="@+id/title"/>
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
+        android:text="LOGIN"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/title1"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edittxts"
+        android:layout_centerInParent="true">
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/emailedittxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="25dp"
-        android:inputType="textEmailAddress"
-        android:hint="    Email"
+        android:background="@drawable/btn_sign_in_background"
+        android:cursorVisible="false"
         android:drawableLeft="@drawable/ic_baseline_email_24"
-        android:id="@+id/emailedittxt"/>
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:hint="  Email"
+        android:inputType="textEmailAddress"
+        android:padding="8dp"
+        android:textSize="24sp" />
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/emailedittxt"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
         android:inputType="textPassword"
-        android:hint="    Password"
+        android:cursorVisible="false"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
+        android:hint="  Password"
+        android:padding="8dp"
+        android:background="@drawable/btn_sign_in_background"
+        android:textColorHint="@color/white"
         android:id="@+id/passwordedittxt"/>
+
+    </RelativeLayout>
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:id="@+id/loginbtn"
-        android:layout_marginTop="16dp"
-        app:cornerRadius="28dp"
-        android:backgroundTint="@color/purple_500"
-        android:layout_width="320dp"
-        android:layout_height="62dp"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
         android:layout_centerHorizontal="true"
         android:text="LOGIN"
-        android:drawableLeft="@drawable/ic_baseline_login_24"
-        android:textSize="24sp"
+        android:backgroundTint="#4a86ff"
         android:textColor="@color/white"
-        android:layout_below="@id/passwordedittxt"/>
+        android:layout_above="@id/google"
+        android:layout_marginHorizontal="16dp"
+        app:cornerRadius="8dp"
+        android:layout_marginBottom="16dp"/>
+
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        android:id="@+id/signupbtn"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_above="@+id/view"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:cornerRadius="28dp"
-        android:backgroundTint="@color/purple_500"
-        android:layout_width="320dp"
-        android:layout_height="62dp"
-        android:layout_centerHorizontal="true"
-        android:text="SIGNUP"
-        android:drawableLeft="@drawable/ic_baseline_create_new_folder_24"
-        android:textSize="24sp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/white"
+        android:text="Sign in with Google"
+        app:cornerRadius="8dp"
+        android:textColor="@color/black"
+        app:icon="@drawable/google"
+        app:iconTint="@null"
+        app:iconGravity="textStart"
+        android:id="@+id/google"
+        android:visibility="gone"/>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@id/newuser"
+        android:background="@color/white"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="16dp"
+        android:id="@+id/view"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="NEW USER"
         android:textColor="@color/white"
-        android:layout_below="@id/loginbtn"/>
+        android:layout_above="@id/signupbtn"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/newuser"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/signupbtn"
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#DD4B39"
+        android:text="SIGN UP"
+        android:textColor="@color/white"
+        app:cornerRadius="8dp" />
+
+
 
 </RelativeLayout>
