--- a/DriverHiring/app/src/main/res/layout/activity_main_menu.xml
+++ b/DriverHiring/app/src/main/res/layout/activity_main_menu.xml
@@ -4,56 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenu">
+    tools:context=".MainMenu"
+    android:background="@drawable/main_bg">
 
-    <ImageView
-        android:id="@+id/titleimg"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="306dp"
-        android:layout_marginHorizontal="15dp"
-        android:src="@drawable/splashh"/>
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DRIVER HIRING"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/titleimg"
-        android:layout_marginBottom="15dp"/>
+        android:layout_centerInParent="true">
+
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:id="@+id/driverbtn"
-        android:layout_marginTop="16dp"
-        app:cornerRadius="28dp"
-        android:backgroundTint="@color/purple_500"
-        android:layout_width="320dp"
-        android:layout_height="62dp"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_marginHorizontal="16dp"
+        app:cornerRadius="8dp"
+        android:backgroundTint="#DD4B39"
         android:layout_centerHorizontal="true"
         android:text="DRIVER"
         android:drawableLeft="@drawable/ic_baseline_drive_eta_24"
-        android:textSize="24sp"
         android:textColor="@color/white"
-        android:layout_below="@id/title"/>
+        android:layout_marginBottom="32dp"/>
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:id="@+id/customerbtn"
-        android:layout_marginTop="16dp"
-        app:cornerRadius="28dp"
-        android:backgroundTint="@color/purple_500"
-        android:layout_width="320dp"
-        android:layout_height="62dp"
+        app:cornerRadius="8dp"
+        android:backgroundTint="#DD4B39"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
         android:layout_centerHorizontal="true"
         android:text="CUSTOMER"
         android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:textSize="24sp"
+        android:layout_marginHorizontal="16dp"
         android:textColor="@color/white"
         android:layout_below="@id/driverbtn"/>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
