--- a/DriverHiring/app/src/main/res/layout/activity_start.xml
+++ b/DriverHiring/app/src/main/res/layout/activity_start.xml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer"
     tools:context=".start" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/bar">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:title="Customer"
+                app:titleTextColor="@color/white"
+                app:navigationIcon="@drawable/ic_baseline_menu_24"/>
+
+
+        </com.google.android.material.appbar.AppBarLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
+
+
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
@@ -34,10 +58,17 @@
             android:text="CURRENT REQUEST"
             android:layout_below="@id/newrequest"
             map:cornerRadius="100dp"/>
-
-
+    </RelativeLayout>
 
     </RelativeLayout>
 
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/navigation_view"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/navigation_menu_customer" />
 
-</RelativeLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
