--- a/DriverHiring/app/src/main/res/values-night/themes.xml
+++ b/DriverHiring/app/src/main/res/values-night/themes.xml
@@ -3,15 +3,15 @@
     <style name="Theme.DriverHiring" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/black2</item>
+        <item name="colorPrimaryVariant">@color/black1</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black1</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
