--- a/ACtingDriver/app/src/main/res/layout/activity_admin.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_admin.xml
@@ -27,11 +27,40 @@
         android:layout_below="@+id/customer_email"
         android:layout_alignParentStart="true" />
 
+    <EditText
+        android:id="@+id/Driver_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:hint="Name"
+        android:layout_below="@+id/customer_password"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/Driver_phonenumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:hint="Phone Number"
+        android:layout_below="@+id/Driver_name"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/driver_car_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:hint="Vehical No"
+        android:layout_below="@+id/Driver_phonenumber"
+        android:layout_alignParentStart="true" />
+
+
+
     <Button
         android:id="@+id/customer_login_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/customer_password"
+        android:layout_below="@+id/driver_car_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="16dp"
