--- a/ACtingDriver/app/src/main/res/layout/activity_customer_login_register.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_customer_login_register.xml
@@ -41,11 +41,31 @@
         android:layout_below="@+id/customer_email"
         android:layout_alignParentStart="true" />
 
+    <EditText
+        android:id="@+id/Driver_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:hint="Name"
+        android:layout_below="@+id/customer_password"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"/>
+
+    <EditText
+        android:id="@+id/Driver_phonenumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:hint="Phone Number"
+        android:layout_below="@+id/Driver_name"
+        android:layout_alignParentStart="true"
+        android:visibility="gone"/>
+
     <Button
         android:id="@+id/customer_login_btn"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/customer_password"
+        android:layout_below="@+id/Driver_phonenumber"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
         android:text="Login"
